--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 
 </head>
 <body>
+
+  <div id="container">
+    <div id="header">
+      <h1>CHIP8 Linear Decompiler</h1>
+    </div>
+    <div id="data">
+      
+    </div>
+  </div>
   
 
   <script src="disassemble.js"></script>
