--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
     <div id="header">
       <h1>CHIP8 Linear Decompiler</h1>
     </div>
-    <div id="data">
-      
+    <div id="dataContainer">
+      <div id="data"></div>
+      <div id="infoTable"></div>
     </div>
+    
   </div>
   
 
