--- a/index.html
+++ b/index.html
@@ -4,25 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>CHIP-8 Disassembler</title>
+  <title>CHIP-8</title>
 
   <link rel="stylesheet" href="style.css">
 
 </head>
+
 <body>
-
-  <div id="container">
-    <div id="header">
-      <h1>CHIP8 Linear Decompiler</h1>
-    </div>
-    <div id="dataContainer">
-      <div id="data"></div>
-      <div id="infoTable"></div>
-    </div>
-    
-  </div>
-  
-
-  <script src="disassemble.js"></script>
+  <canvas></canvas>
+  <script type="module" src="index.js"></script>
 </body>
 </html>
