--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <canvas id="screen"></canvas>
+  <canvas id="screen" width=64 height=32></canvas>
   <script type="module" src="index.js"></script>
 </body>
 </html>
