--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 </head>
 
 <body>
-  <canvas id="screen" width=64 height=32></canvas>
+  <div id="screenContainer">
+      <canvas id="screen" width=64 height=32></canvas>
+  </div>
+
   <script type="module" src="index.js"></script>
 </body>
 </html>
