added cache busting

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>CHIP-8</title>
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css?v=20191113">
 
 </head>
 
@@ -15,6 +15,10 @@
       <canvas id="screen" width=64 height=32></canvas>
   </div>
 
-  <script type="module" src="index.js"></script>
+  <div class="buttonBox">
+    <button id="reset">load</button>
+  </div>
+
+  <script type="module" src="index.js?v=20191113"></script>
 </body>
 </html>
