fixed underflow bug with the 8xy5 opcode, and fixed a bug causing multple instances of the emulator to run ontop of itself

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
     
     <select id="selectGame">
       <option selected disabled>pick a game</option>
-      <option value="0">test.ch8</option>
     </select>
   
     <div class="buttonBox">
@@ -34,6 +33,6 @@
   </div>
 
 
-  <script type="module" src="index.js?v=20191113"></script>
+  <script type="module" src="index.js?v=20191113-2"></script>
 </body>
 </html>
