made the site more responsive

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>CHIP-8</title>
 
-  <link rel="stylesheet" href="style.css?v=20191113">
+  <link rel="stylesheet" href="style.css?v=20191114-1">
 
 </head>
 
@@ -17,7 +17,7 @@
   </div>
 
   <div id="screenContainer">
-      <canvas id="screen" width=64 height=32></canvas>
+      <canvas id="screen" ></canvas>
   </div>
 
   <div id="optionsWrap">
@@ -33,6 +33,6 @@
   </div>
 
 
-  <script type="module" src="index.js?v=20191113-2"></script>
+  <script type="module" src="index.js?v=20191114-1"></script>
 </body>
 </html>
