Updated CSS, button behavior

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
   <div id="optionsWrap">
     
     <select id="selectGame">
-      <option selected disabled>pick a game</option>
+      <option selected disabled>pick a ROM</option>
     </select>
   
     <div class="buttonBox">
-      <button id="reset">load</button>
+      <button disabled id="reset">load</button>
     </div>
 
   </div>
