--- a/index.html
+++ b/index.html
@@ -21,15 +21,19 @@
   </div>
 
   <div id="optionsWrap">
-    
     <select id="selectGame">
       <option selected disabled>pick a ROM</option>
     </select>
-  
     <div class="buttonBox">
       <button disabled id="reset">load</button>
     </div>
+  </div>
 
+  <div id="keyboardWrap">
+     <div class="key">1</div><div class="key">2</div><div class="key">3</div><div class="key">C</div>
+     <div class="key">4</div><div class="key">5</div><div class="key">6</div><div class="key">D</div>
+     <div class="key">7</div><div class="key">8</div><div class="key">9</div><div class="key">E</div>
+     <div class="key">A</div><div class="key">0</div><div class="key">B</div><div class="key">F</div>
   </div>
 
 
