--- a/index.html
+++ b/index.html
@@ -30,10 +30,22 @@
   </div>
 
   <div id="keyboardWrap">
-     <div class="key">1</div><div class="key">2</div><div class="key">3</div><div class="key">C</div>
-     <div class="key">4</div><div class="key">5</div><div class="key">6</div><div class="key">D</div>
-     <div class="key">7</div><div class="key">8</div><div class="key">9</div><div class="key">E</div>
-     <div class="key">A</div><div class="key">0</div><div class="key">B</div><div class="key">F</div>
+     <div class="key" id="0">1</div>
+     <div class="key" id="1">2</div>
+     <div class="key" id="2">3</div>
+     <div class="key" id="3">C</div>
+     <div class="key" id="4">4</div>
+     <div class="key" id="5">5</div>
+     <div class="key" id="6">6</div>
+     <div class="key" id="7">D</div>
+     <div class="key" id="8">7</div>
+     <div class="key" id="9">8</div>
+     <div class="key" id="10">9</div>
+     <div class="key" id="11">E</div>
+     <div class="key" id="12">A</div>
+     <div class="key" id="13">0</div>
+     <div class="key" id="14">B</div>
+     <div class="key" id="15">F</div>
   </div>
 
 
